--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="tailwind.js"></script>
-        <title>🧡</title>
-    </head>
-    <body>
-        <div class="flex h-screen items-center justify-center">
-            <div id="app"></div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
 
-        <script type="module">
-            import { h, mount } from './vue-vdom.js';
-            import { vdom1 as vdom } from './vdom-examples.js';
+    <title>Vue VDOM</title>
+  </head>
 
-            // Creating vnodes
-            // const vdom = h('h1', null, 'Hello 👋');
+  <body class="flex h-screen items-center justify-center">
+    <main id="app"></main>
 
-            // Mounting VDOM -------------------------------------
-            const app = document.getElementById('app');
-            mount(vdom, app);
-        </script>
-    </body>
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
